<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:weightSum="10"
    android:paddingBottom="5dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Your Password"
        android:textSize="22sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:fontFamily="@font/abrilfatface_regular_maintitle"
        android:textAllCaps="false"
        android:textColor="@color/orangeColor"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:id="@+id/currentPassword"
            android:inputType="textWebPassword"
            android:imeOptions="actionNext"
            android:textColorHint="@color/greyColor"
            android:fontFamily="@font/calibri"
            android:textColor="@color/blackColor"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:id="@+id/newPassword"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="textWebPassword"
            android:textColorHint="@color/greyColor"
            android:fontFamily="@font/calibri"
            android:textColor="@color/blackColor"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:id="@+id/confirmNewPassword"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="textWebPassword"
            android:fontFamily="@font/calibri"
            android:textColorHint="@color/greyColor"
            android:textColor="@color/blackColor"
            android:layout_marginTop="15dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changePasswordBtn"
            android:textColor="@color/orangeColor"
            android:background="@drawable/button_background"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/calibri"
            android:text="Change Password"/>

    </LinearLayout>





</LinearLayout>
