<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:weightSum="10"
    android:paddingBottom="5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:orientation="horizontal">


    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back_arrow"
        app:tint="@color/red"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Your Profile"
        android:textSize="22sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/calibri"
        android:textAllCaps="false"
        android:textColor="@color/orangeColor"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textSize="16sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:fontFamily="@font/calibri"
            android:textAllCaps="false"
            android:textColor="@color/greyColor"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:id="@+id/phoneNumber"
            android:inputType="numberDecimal"
            android:maxLength="13"
            android:imeOptions="actionNext"
            android:textColorHint="@color/greyColor"
            android:textColor="@color/blackColor"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/calibri"
            android:textAllCaps="false"
            android:textColor="@color/greyColor"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="abc"
            android:id="@+id/name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:textColorHint="@color/greyColor"
            android:textColor="@color/blackColor"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="16sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/calibri"
            android:textAllCaps="false"
            android:textColor="@color/greyColor"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="abc@gmail.com"
            android:id="@+id/email_et"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="textWebEmailAddress"
            android:textColorHint="@color/greyColor"
            android:textColor="@color/blackColor"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateProfileBtn"
            android:textColor="@color/orangeColor"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/calibri"
            android:text="Update Profile"/>

    </LinearLayout>





</LinearLayout>
